--- a/src/MidSurfaceGenerator/MainWindow.xaml
+++ b/src/MidSurfaceGenerator/MainWindow.xaml
@@ -5,8 +5,31 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MidSurfaceGenerator"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+         Title="MidSurface Generator" WindowState="Maximized">
+    <Grid Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}">
+        <Menu x:Name="menu" VerticalAlignment="Top" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+            <MenuItem Header="File">
+                <MenuItem Header="Import" Click="Import_Click"/>
+                <MenuItem Header="Export"/>
+                <MenuItem Header="Close"/>
+            </MenuItem>
+            <MenuItem Header="Generate" Click="Generate"/>
+            <MenuItem Header="Settings" Click="Settings_Click"/>
+            <MenuItem Header="Help">
+                <MenuItem Header="Operator guide"/>
+                <MenuItem Header="About"/>
+            </MenuItem>
+        </Menu>
+        <ToolBar x:Name="toolBar" Margin="0,18,0,0" VerticalAlignment="Top" Height="31" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}">
+            <Label x:Name="label1" Content="Accuracy" Height="26" VerticalAlignment="Top"/>
+            <TextBox x:Name="textBox_Accuracy" Height="26" Margin="0,1" TextWrapping="Wrap" Text="0.001" VerticalAlignment="Top" HorizontalContentAlignment="Right" MinHeight="10" Padding="2" BorderThickness="2"/>
+            <Label x:Name="label2" Content="Scale"/>
+            <TextBox x:Name="textBox" HorizontalAlignment="Left" Margin="0" TextWrapping="Wrap" Text="1" VerticalAlignment="Center" Width="16" MinWidth="20" HorizontalContentAlignment="Right"/>
+        </ToolBar>
+        <Canvas x:Name="mainCanvas" Margin="0,49,0,22" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}"/>
+        <StatusBar Margin="0,295,0,0" VerticalAlignment="Bottom" VerticalContentAlignment="Center">
+            <Label x:Name="label" Content="Status " Padding="0" BorderBrush="Black" BorderThickness="0,0,1,0"/>
+            <Label x:Name="currentStatus" Content="Ready for work" Padding="0" Grid.IsSharedSizeScope="True" HorizontalContentAlignment="Center"/>
+        </StatusBar>
     </Grid>
 </Window>
