Changed logic of replacing origin of canvas to Dran and Drop style;
Signed-off-by: Динар Каримов <Динар Каримов>

--- a/src/MidSurfaceGenerator/MainWindow.xaml
+++ b/src/MidSurfaceGenerator/MainWindow.xaml
@@ -30,6 +30,6 @@
             <Label x:Name="label" Content="Status " Padding="0" BorderBrush="Black" BorderThickness="0,0,1,0"/>
             <Label x:Name="currentStatus" Content="Ready for work" Padding="0" Grid.IsSharedSizeScope="True" HorizontalContentAlignment="Center"/>
         </StatusBar>
-        <Canvas x:Name="mainCanvas" Margin="0,49,0,22" MouseRightButtonUp="ChangeOriginOfCanvas" Background="White"/>
+        <Canvas x:Name="mainCanvas" Margin="0,49,0,22" Background="White" MouseRightButtonDown="mainCanvas_MouseRightButtonDown" MouseRightButtonUp="mainCanvas_MouseRightButtonUp"/>
     </Grid>
 </Window>
