--- a/src/MidSurfaceGenerator/MainWindow.xaml
+++ b/src/MidSurfaceGenerator/MainWindow.xaml
@@ -6,8 +6,8 @@
         xmlns:local="clr-namespace:MidSurfaceNameSpace.MidSurfaceGenerator"
         mc:Ignorable="d"
          Title="MidSurface Generator" WindowState="Maximized">
-    <Grid Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}">
-        <Menu x:Name="menu" VerticalAlignment="Top" ScrollViewer.VerticalScrollBarVisibility="Disabled">
+    <DockPanel Margin="0" OverridesDefaultStyle="True" UseLayoutRounding="False">
+        <Menu x:Name="menu" VerticalAlignment="Top" ScrollViewer.VerticalScrollBarVisibility="Disabled" d:LayoutOverrides="TopPosition, BottomPosition" DockPanel.Dock="Top">
             <MenuItem Header="File">
                 <MenuItem Header="Import" Click="Import_Click"/>
                 <MenuItem Header="Export"/>
@@ -20,16 +20,14 @@
                 <MenuItem Header="About"/>
             </MenuItem>
         </Menu>
-        <ToolBar x:Name="toolBar" Margin="0,18,0,0" VerticalAlignment="Top" Height="31" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}">
+        <ToolBar x:Name="toolBar" Margin="0" VerticalAlignment="Top" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" d:LayoutOverrides="TopPosition, BottomPosition" DockPanel.Dock="Top">
             <Label x:Name="label1" Content="Accuracy" Height="26" VerticalAlignment="Top"/>
-            <TextBox x:Name="textBox_Accuracy" Height="26" Margin="0,1" TextWrapping="Wrap" Text="0.001" VerticalAlignment="Top" HorizontalContentAlignment="Right" MinHeight="10" Padding="2" BorderThickness="2" MaxWidth="100"/>
-            <Label x:Name="label2" Content="Scale"/>
-            <TextBox x:Name="textBox_Scale" HorizontalAlignment="Left" Margin="0" TextWrapping="Wrap" Text="10" VerticalAlignment="Center" Width="25" MinWidth="20" HorizontalContentAlignment="Right" MaxWidth="51"/>
+            <TextBox x:Name="textBox_Accuracy" Height="26" Margin="0" TextWrapping="Wrap" Text="0.001" VerticalAlignment="Center" HorizontalContentAlignment="Right" MinHeight="10" Padding="2" BorderThickness="2" MaxWidth="100"/>
         </ToolBar>
-        <StatusBar Margin="0,295,0,0" VerticalAlignment="Bottom" VerticalContentAlignment="Center">
+        <StatusBar VerticalAlignment="Bottom" VerticalContentAlignment="Center" d:LayoutOverrides="TopPosition, BottomPosition" DockPanel.Dock="Bottom" Height="22">
             <Label x:Name="label" Content="Status " Padding="0" BorderBrush="Black" BorderThickness="0,0,1,0"/>
             <Label x:Name="currentStatus" Content="Ready for work" Padding="0" Grid.IsSharedSizeScope="True" HorizontalContentAlignment="Center"/>
         </StatusBar>
-        <Canvas x:Name="mainCanvas" Margin="0,49,0,22" Background="White"/>
-    </Grid>
+        <Canvas x:Name="mainCanvas" Margin="0" Background="White" d:LayoutOverrides="TopPosition, BottomPosition" AutomationProperties.IsOffscreenBehavior="FromClip" DockPanel.Dock="Top"/>
+    </DockPanel>
 </Window>
