--- a/src/MidSurfaceGenerator/MainWindow.xaml
+++ b/src/MidSurfaceGenerator/MainWindow.xaml
@@ -22,8 +22,11 @@
             <MenuItem Header="Прогнать все тесты" Click ="Go_all_tests"/>
         </Menu>
         <ToolBar x:Name="toolBar" VerticalAlignment="Top" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" d:LayoutOverrides="TopPosition, BottomPosition" DockPanel.Dock="Top">
-            <Label x:Name="label1" Content="Accuracy" Height="26" VerticalAlignment="Top"/>
-            <TextBox x:Name="textBox_Accuracy" Height="26" Margin="0" TextWrapping="Wrap" Text="0.001" VerticalAlignment="Center" HorizontalContentAlignment="Right" MinHeight="10" Padding="2" BorderThickness="2" MaxWidth="100"/>
+            <Label x:Name="label1" Content="Splitter Accuracy" Height="26" VerticalAlignment="Top"/>
+            <TextBox x:Name="textBox_Splitter_Accuracy" Height="26" Margin="0" TextWrapping="Wrap" Text="0.1" VerticalAlignment="Center" HorizontalContentAlignment="Center" MinHeight="10" Padding="2" BorderThickness="2" MinWidth="20" MaxWidth="100"/>
+            <Separator/>
+            <Label x:Name="label2" Content="Detalizer Accuracy" Height="26" VerticalAlignment="Top"/>
+            <TextBox x:Name="textBox_Detalizer_Accuracy" Height="26" Margin="0" TextWrapping="Wrap" Text="5" VerticalAlignment="Center" HorizontalContentAlignment="Center" MinHeight="10" Padding="2" BorderThickness="2" MinWidth="20" MaxWidth="100"/>
         </ToolBar>
         <StatusBar VerticalAlignment="Bottom" VerticalContentAlignment="Center" d:LayoutOverrides="TopPosition, BottomPosition" DockPanel.Dock="Bottom" Height="22">
             <Label x:Name="label" Content="Status " Padding="0" BorderBrush="Black" BorderThickness="0,0,1,0"/>
