Change tests html

--- a/src/MidSurfaceGenerator/MainWindow.xaml
+++ b/src/MidSurfaceGenerator/MainWindow.xaml
@@ -20,6 +20,9 @@
                 <MenuItem Header="About"/>
             </MenuItem>
             <MenuItem Header="Run all tests" Click ="Go_all_tests"/>
+            <MenuItem Header="Strategi">
+                <MenuItem Header="Enumeration" Click="Do_Enumeration"/>
+            </MenuItem>
         </Menu>
         <ToolBar x:Name="toolBar" VerticalAlignment="Top" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" d:LayoutOverrides="TopPosition, BottomPosition" DockPanel.Dock="Top">
             <Label x:Name="label1" Content="Splitter Accuracy" Height="26" VerticalAlignment="Top"/>
