--- a/src/MidSurfaceGenerator/MainWindow.xaml
+++ b/src/MidSurfaceGenerator/MainWindow.xaml
@@ -27,6 +27,7 @@
                 <MenuItem Header="Show Normal" Click="ShowNormal_Click"/>
                 <MenuItem Header="Show Only Points" Click="ShowOnlyPoints_Click"/>
                 <MenuItem Header="Show Indices" Click="ShowIndices_Click"/>
+                <MenuItem Header="Show Only Model Indices" Click="ShowOnlyModelIndices_Click"/>
                 <Separator/>
                 <MenuItem Header="Clear" Click="ClearDebug_Click"/>
             </MenuItem>
