--- a/src/MidSurfaceGenerator/MainWindow.xaml
+++ b/src/MidSurfaceGenerator/MainWindow.xaml
@@ -43,6 +43,8 @@
             <Separator/>
             <Label x:Name="label3" Content="Debug Parameters" Height="26" VerticalAlignment="Top" HorizontalAlignment="Right"/>
             <TextBox x:Name="textBox_Debug" Height="26" Margin="0" TextWrapping="Wrap" Text="0; 0.5; 10" VerticalAlignment="Center" HorizontalContentAlignment="Right" MinHeight="10" Padding="2" BorderThickness="2" MinWidth="20" MaxWidth="100"/>
+            <Label x:Name="label4" Content="Debug Parameters: Normal step " Height="26" VerticalAlignment="Top" HorizontalAlignment="Right"/>
+            <TextBox x:Name="textBox_DebugNormalStep" Height="26" Margin="0" TextWrapping="Wrap" Text="1" VerticalAlignment="Center" HorizontalContentAlignment="Right" MinHeight="10" Padding="2" BorderThickness="2" MinWidth="20" MaxWidth="100"/>
         </ToolBar>
         <StatusBar VerticalAlignment="Bottom" VerticalContentAlignment="Center" d:LayoutOverrides="TopPosition, BottomPosition" DockPanel.Dock="Bottom" Height="22">
             <Label x:Name="label" Content="Status " Padding="0" BorderBrush="Black" BorderThickness="0,0,1,0"/>
