--- a/src/MidSurfaceGenerator/Settings.xaml
+++ b/src/MidSurfaceGenerator/Settings.xaml
@@ -1,12 +1,24 @@
-﻿<Window x:Class="MidSurfaceGenerator.Settings"
+﻿<Window x:Class="MidSurfaceNameSpace.MidSurfaceGenerator.Settings"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MidSurfaceGenerator"
+        xmlns:local="clr-namespace:MidSurfaceNameSpace.MidSurfaceGenerator"
         mc:Ignorable="d"
         Title="Settings" Height="300" Width="300">
     <Grid>
-        
+        <Grid HorizontalAlignment="Left" Height="269" VerticalAlignment="Top" Width="290">
+            <Label Content="Color of Model" HorizontalAlignment="Left" Height="27" Margin="10,10,0,0" VerticalAlignment="Top" Width="128"/>
+            <Label Content="Color of Mid Surface" HorizontalAlignment="Left" Height="27" Margin="10,42,0,0" VerticalAlignment="Top" Width="128"/>
+            <Button Content="Save" HorizontalAlignment="Left" Margin="112,239,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+            <Button Content="Cancel" HorizontalAlignment="Left" Margin="205,239,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+            <Label Content="Thickness of Model" HorizontalAlignment="Left" Height="27" Margin="10,74,0,0" VerticalAlignment="Top" Width="128"/>
+            <Label Content="Thickness of Mid Surface" HorizontalAlignment="Left" Height="27" Margin="10,106,0,0" VerticalAlignment="Top" Width="142"/>
+            <ComboBox x:Name="colorsModel" HorizontalAlignment="Left" Margin="181,15,0,0" VerticalAlignment="Top" Width="99"/>
+            <ComboBox x:Name="colorsMidSurface" HorizontalAlignment="Left" Margin="181,42,0,0" VerticalAlignment="Top" Width="99"/>
+        </Grid>
+        <TextBox x:Name="tb_thikModel" HorizontalAlignment="Left" Height="24" Margin="180,76,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="102"/>
+        <TextBox x:Name="tb_thikMidSurf" HorizontalAlignment="Left" Height="24" Margin="180,105,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="102"/>
+
     </Grid>
 </Window>
