--- a/src/MidSurfaceGenerator/Settings.xaml
+++ b/src/MidSurfaceGenerator/Settings.xaml
@@ -5,20 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MidSurfaceNameSpace.MidSurfaceGenerator"
         mc:Ignorable="d"
-        Title="Settings" Height="300" Width="300" WindowStartupLocation="CenterOwner">
+        Title="Настройки" Height="300" Width="365.727" WindowStartupLocation="CenterOwner">
     <Grid>
-        <Grid HorizontalAlignment="Left" Height="269" VerticalAlignment="Top" Width="290">
-            <Label Content="Color of Model" HorizontalAlignment="Left" Height="27" Margin="10,10,0,0" VerticalAlignment="Top" Width="128"/>
-            <Label Content="Color of Mid Surface" HorizontalAlignment="Left" Height="27" Margin="10,42,0,0" VerticalAlignment="Top" Width="128"/>
-            <Button Content="Save" HorizontalAlignment="Left" Margin="112,239,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
-            <Button Content="Cancel" HorizontalAlignment="Left" Margin="205,239,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-            <Label Content="Thickness of Model" HorizontalAlignment="Left" Height="27" Margin="10,74,0,0" VerticalAlignment="Top" Width="128"/>
-            <Label Content="Thickness of Mid Surface" HorizontalAlignment="Left" Height="27" Margin="10,106,0,0" VerticalAlignment="Top" Width="142"/>
-            <ComboBox x:Name="colorsModel" HorizontalAlignment="Left" Margin="181,15,0,0" VerticalAlignment="Top" Width="99"/>
-            <ComboBox x:Name="colorsMidSurface" HorizontalAlignment="Left" Margin="181,42,0,0" VerticalAlignment="Top" Width="99"/>
+        <Grid HorizontalAlignment="Left" Height="269" VerticalAlignment="Top" Width="358" >
+            <Label Content="Цвет модели" HorizontalAlignment="Left" Height="27" Margin="10,10,0,0" VerticalAlignment="Top" Width="128"/>
+            <Label Content="Цвет срединной поверхности" HorizontalAlignment="Left" Height="27" Margin="10,42,0,0" VerticalAlignment="Top" Width="194"/>
+            <Button Content="Сохранить" HorizontalAlignment="Left" Margin="193,239,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+            <Button Content="Отменить" HorizontalAlignment="Left" Margin="273,239,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+            <Label Content="Толщина линий модели" HorizontalAlignment="Left" Height="27" Margin="10,74,0,0" VerticalAlignment="Top" Width="163"/>
+            <Label Content="Толщина линий срединной поверхности" HorizontalAlignment="Left" Height="26" Margin="10,106,0,0" VerticalAlignment="Top" Width="244"/>
+            <ComboBox x:Name="colorsModel" HorizontalAlignment="Left" Margin="249,15,0,0" VerticalAlignment="Top" Width="99"/>
+            <ComboBox x:Name="colorsMidSurface" HorizontalAlignment="Left" Margin="249,42,0,0" VerticalAlignment="Top" Width="99"/>
         </Grid>
-        <TextBox x:Name="tb_thikModel" HorizontalAlignment="Left" Height="24" Margin="180,76,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="102"/>
-        <TextBox x:Name="tb_thikMidSurf" HorizontalAlignment="Left" Height="24" Margin="180,105,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="102"/>
+        <TextBox x:Name="tb_thikModel" HorizontalAlignment="Left" Height="24" Margin="284,76,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="64" HorizontalContentAlignment="Right"/>
+        <TextBox x:Name="tb_thikMidSurf" HorizontalAlignment="Left" Height="24" Margin="284,105,0,0" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="64" HorizontalContentAlignment="Right"/>
 
     </Grid>
 </Window>
